src/RedPitaya/Rp.chs


-- |  Sets the trigger threshold hysteresis value in volts.
-- Value must be outside to enable the trigger again.
{#fun rp_AcqSetTriggerHyst as setTriggerLevelHyst  { `CFloat' } -> `RpError' #}

-- | Gets currently set trigger threshold hysteresis value in volts
{#fun rp_AcqGetTriggerHyst as getTriggerLevelHyst  { alloca- `CFloat' peek* } -> `RpError' #}

-- | Sets the acquire gain state. The gain should be set to the same value as it is set on the Red Pitaya
{#fun rp_AcqSetGain as setAcqGain { `Channel' , `PinState' } -> `RpError' #}

-- | Returns the currently set acquire gain state in the library. It may not be set to the same value as
-- it is set on the Red Pitaya hardware by the LV/HV gain jumpers. LV = 1V; HV = 20V.
{#fun rp_AcqGetGain as getAcqGain { `Channel' , alloca- `PinState' peekEnum* } -> `RpError' #}

-- | Returns the currently set acquire gain in the library. It may not be set to the same value as
-- it is set on the Red Pitaya hardware by the LV/HV gain jumpers. Returns value in Volts.
{#fun rp_AcqGetGainV as getAcqGainV { `Channel' , alloca- `CFloat' peek* } -> `RpError' #}

-- |  Returns current position of ADC write pointer.
{#fun rp_AcqGetWritePointer as getAcqWritePointer { alloca- `Integer' peekInt* } -> `RpError' #}

-- | Returns position of ADC write pointer at time when trigger arrived.
{#fun rp_AcqGetWritePointerAtTrig as getAcqWritePointerAtTrg { alloca- `Integer' peekInt* } -> `RpError' #}

-- | Starts the acquire. Signals coming from the input channels are acquired and written into memory.
{#fun rp_AcqStart as acqStart {} -> `RpError' #}

-- | Resets the acquire writing state machine.
{#fun rp_AcqReset as acqReset {} -> `RpError' #}


-- | Normalizes the ADC buffer position. Returns the modulo operation of ADC buffer size...
{#fun rp_AcqGetNormalizedDataPos as getNormalisedDataPosition { fromIntegral `Integer'  } ->  `Integer' fromIntegral #}



getPosSizeBufferHelper :: (Storable a) => (CInt -> (CUInt -> ((Ptr CUInt) -> ((Ptr a) -> (IO CInt))))) -> Channel -> Int -> Int -> IO ( RpError , [a])
getPosSizeBufferHelper ffiFunc chan pos size = allocaArray  (fromIntegral size)  $ 
    \bufptr -> alloca $
        \sizeptr ->  do
            let echan  = fromIntegral $ fromEnum chan
            let ipos = fromIntegral pos
            err <- ffiFunc echan ipos sizeptr bufptr
            if (err /= 0) then 
                do
                    len <- peek  sizeptr
                    arr <- peekArray (fromIntegral len) bufptr
                    return ( Ok , arr)
            else return ( toEnum $ fromIntegral err , [])

getSizeBufferHelper :: (Storable a) => (CInt -> Ptr CUInt -> Ptr a -> IO CInt) -> Int -> Channel -> IO ( RpError , [a])
getSizeBufferHelper ffiFunc allocSize chan = allocaArray  allocSize $ 
    \bufptr -> alloca $
        \sizeptr ->  do
            let echan  = fromIntegral $ fromEnum chan
            _ <- poke sizeptr (fromIntegral allocSize)
            err <- ffiFunc echan sizeptr bufptr
            if (err /= 0) then 
                do
                    len <- peek  sizeptr
                    arr <- peekArray (fromIntegral len) bufptr
                    return ( Ok , arr)
            else return ( toEnum $ fromIntegral err , [])


-- | get raw ADC data from channel passing position and size
getAckDataRaw :: Channel -> Int -> Int -> IO ( RpError , [CShort])
getAckDataRaw = getPosSizeBufferHelper {#call rp_AcqGetDataRaw#}

-- | get  ADC data Voltage from channel passing position and size
getAckDataV :: Channel -> Int -> Int -> IO ( RpError , [CFloat])
getAckDataV = getPosSizeBufferHelper {#call rp_AcqGetDataV#}

-- | Returns the ADC buffer in raw units from the oldest sample to the newest one.
-- First parameter is maximal length of returned data (how large buffer to allocate)
getAckOldestDataRaw :: Int -> Channel ->  IO ( RpError , [CShort])
getAckOldestDataRaw = getSizeBufferHelper {#call rp_AcqGetOldestDataRaw#}

-- | Returns the ADC buffer in raw units from the latest
-- First parameter is maximal length of returned data (how large buffer to allocate)
getAckLatestDataRaw :: Int -> Channel ->  IO ( RpError , [CShort])
getAckLatestDataRaw = getSizeBufferHelper {#call rp_AcqGetLatestDataRaw#}

-- | Returns the ADC buffer in volts from the oldest sample to the newest one.
-- First parameter is maximal length of returned list (how large buffer to allocate)
getAckOldestDataV :: Int -> Channel ->  IO ( RpError , [CFloat])
getAckOldestDataV = getSizeBufferHelper {#call rp_AcqGetOldestDataV#}

-- | Returns the ADC buffer in volts from the latest
-- First parameter is maximal length of returned list (how large buffer to allocate)
getAckLatestDataV :: Int -> Channel ->  IO ( RpError , [CFloat])
getAckLatestDataV = getSizeBufferHelper {#call rp_AcqGetLatestDataV#}

{#fun rp_AcqGetBufSize  as getAcqBufSize { alloca- `Integer' peekInt* } -> `RpError' #}

-- |  Gets data about system health like temperature
{#fun rp_HealthGetValue as getHealthValue { `Health' ,  alloca- `CFloat' peek* } -> `RpError' #}

-- | Sets generate to default values.
{#fun rp_GenReset as generatorReset  {} -> `RpError' #}

-- | Enables output
{#fun rp_GenOutEnable as generatorOutEnable  {`Channel'} -> `RpError' #}

-- | Disables output
{#fun rp_GenOutDisable as generatorOutDisable  {`Channel'} -> `RpError' #}

-- | Gets value true if channel is enabled otherwise return false.
{#fun rp_GenOutIsEnabled as generatorOutIsEnabled  {`Channel', alloca- `Bool' peekBool*} -> `RpError' #}

-- | Sets channel signal peak to peak amplitude.
{#fun rp_GenAmp as generatorAmp {`Channel' , `CFloat' } -> `RpError' #}

-- | gets channel signal peak to peak amplitude
{#fun rp_GenGetAmp as getGeneratorAmp {`Channel' , alloca- `CFloat' peek* } -> `RpError' #}


-- | Sets DC offset of the signal. signal = signal + DC_offset.
{#fun rp_GenOffset as setGeneratorOffset {`Channel' , `CFloat' } -> `RpError' #}

-- | Sets channel signal frequency.
{#fun rp_GenFreq as generatorFrequency {`Channel' , `CFloat' } -> `RpError' #}

-- | Sets channel signal phase. This shifts the signal in time.
{#fun rp_GenPhase as generatorPhase {`Channel' , `CFloat' } -> `RpError' #}


-- | Sets channel signal phase. This shifts the signal in time.
{#fun rp_GenWaveform as generatorWaveForm {`Channel' , `Waveform' } -> `RpError' #}


setBufferHelper :: (Storable a,Integral i) => (Ptr a -> i -> IO r) -> [a] -> IO r
setBufferHelper fun xs = withArrayLen xs (\i p -> fun p (fromIntegral i))


-- | Sets user defined waveform
generatorArbWaveForm :: Channel -> [CFloat] -> IO RpError
generatorArbWaveForm c xs = (toEnum . fromIntegral) <$>
            setBufferHelper ({#call rp_GenArbWaveform #} 
            ((fromIntegral . fromEnum) c)) xs 


-- | Sets duty cycle of PWM signal.
{#fun rp_GenDutyCycle as generatorDutyCycle {`Channel' , `CFloat' } -> `RpError' #}

-- | Sets generation mode. 
{#fun rp_GenMode as generatorMode {`Channel' , `GeneratorMode' } -> `RpError' #}

-- | Sets number of generated waveforms in a burst. If -1 a continuous signal will be generated.
{#fun rp_GenBurstCount as generatorBursts {`Channel' , fromInteger `Integer' } -> `RpError' #}

-- | Sets number of burst repetitions. This determines how many bursts will be generated.
-- If -1 a continuous signal will be generated.
{#fun rp_GenBurstRepetitions as generatorBurstsRepetitions {`Channel' , fromInteger `Integer' } -> `RpError' #}


-- | Sets the time/period of one burst in micro seconds. Period must be equal or greater then the time of one burst.
-- If it is greater than the difference will be the delay between two consequential bursts.
{#fun rp_GenBurstPeriod as generatorBurstsPeriod {`Channel' , fromInteger `Integer' } -> `RpError' #}

-- | Sets trigger source.
{#fun rp_GenTriggerSource as generatorTriggerSource {`Channel' , `TriggerSource' } -> `RpError' #}
